Added process_antivirus checkbox

--- a/investigations/templates/investigations/newinvest.html
+++ b/investigations/templates/investigations/newinvest.html
@@ -37,6 +37,11 @@
             {% endfor %}
             {{form.investigators}}
           </div>
+          <div class="mb-3"><label class="form-label"><strong>Parameters</strong></label>
+            <div class="form-group mb-3">
+              Process scan {{form.process_antivirus}}
+            </div>
+          </div>
           <div class="row mb-2">
             <div class="col">
               <div class="mb-3"><label class="form-label" for="service_client_end_date"><strong>Memory Dump *</strong><br></label>
